--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div class="navBar main" id="myNavbar">
             <a href="#home" class="active">Home</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
