--- a/about.html
+++ b/about.html
@@ -25,6 +25,22 @@
     <div class="container about">
         <h4>What should you know about me?</h4>
     </div>
+    <div>
+        <ul>
+            <label>Tools and technologies:</label>
+            <h3>Frontend</h3>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>React js</li>
+            <h3>Backend</h3>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>MySQL</li>
+            <li>MongoDB</li>
+        </ul>
+    </div>
+   
     <script src="script.js"></script>
 </body>
 </html>
