--- a/index.html
+++ b/index.html
@@ -36,32 +36,96 @@
         <div class="row">
             <div class="column">
             <div class="content">
-                <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
+                <img src="img/hangman.png" alt="Hangman" class="project-img">
+                <h3>Hangman</h3>
                 <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
             </div>
             <div class="column">
             <div class="content">
-            <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-                <h3>My Work</h3>
+            <img src="img/tic-tac-toe.png" alt="Tic-tac-toe" class="project-img">
+                <h3>Tic Tac Toe</h3>
                 <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
             </div>
             <div class="column">
             <div class="content">
-            <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-                <h3>My Work</h3>
+            <img src="img/snake_game.png" alt="Snake game" class="project-img">
+                <h3>Snake</h3>
                 <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
             </div>
             <div class="column">
             <div class="content">
-            <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
+            <img src="img/tennis.png" alt="Tennis game" class="project-img">
+                <h3>Tennis game</h3>
                 <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
             </div>
+        <!-- END GRID -->
+        </div>
+        <!-- SECOND GRID -->
+        <div class="row">
+            <div class="column">
+            <div class="content">
+                <img src="img/calculator.png" alt="Calculator" class="project-img">
+                <h3>Calculator</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+            <div class="column">
+            <div class="content">
+            <img src="img/chuck_api.png" alt="Chuck Norris jokes" class="project-img">
+                <h3>Chuck Norris Jokes</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+            <div class="column">
+            <div class="content">
+            <img src="img/quiz.png" alt="Quiz" class="project-img">
+                <h3>Quiz game</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+            <div class="column">
+            <div class="content">
+            <img src="img/website.png" alt="website" class="project-img">
+                <h3>Website</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+        <!-- END GRID -->
+        </div>
+        <!-- THIRD GRID -->
+        <div class="row">
+            <div class="column">
+            <div class="content">
+                <img src="img/mybooks.png" alt="Virtual library" class="project-img">
+                <h3>My virtual library app</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+            <!--div class="column">
+            <div class="content">
+            <img src="img/nopic.png" alt="Chuck Norris jokes" class="project-img">
+                <h3>Chuck Norris Jokes</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+            <div class="column">
+            <div class="content">
+            <img src="img/nopic.png" alt="Quiz" class="project-img">
+                <h3>Quiz game</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div>
+            <div class="column">
+            <div class="content">
+            <img src="img/nopic.png" alt="website" class="project-img">
+                <h3>Website</h3>
+                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            </div>
+            </div -->
         <!-- END GRID -->
         </div>
     </div>
