next/prev buttons added

--- a/index.html
+++ b/index.html
@@ -30,103 +30,112 @@
         <h1>BRAMI-CODE</h1>
         <hr>
         
-        <h2>My projects</h2>
-
-        <!-- Portfolio Gallery Grid -->
-        <div class="row">
-            <div class="column">
-            <div class="content">
-                <img src="img/hangman.png" alt="Hangman" class="project-img">
-                <h3>Hangman</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <h2>My projects</h2>      
+        <div id="firstPage" class="first-page">
+            <!-- Portfolio Gallery Grid -->
+            <div class="row">
+                <div class="column">
+                <div class="content">
+                    <img src="img/hangman.png" alt="Hangman" class="project-img">
+                    <h3>Hangman</h3>
+                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                </div>
+                </div>
+                <div class="column">
+                <div class="content">
+                <img src="img/tic-tac-toe.png" alt="Tic-tac-toe" class="project-img">
+                    <h3>Tic Tac Toe</h3>
+                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                </div>
+                </div>
+                <div class="column">
+                <div class="content">
+                <img src="img/snake_game.png" alt="Snake game" class="project-img">
+                    <h3>Snake</h3>
+                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                </div>
+                </div>
+                <div class="column">
+                <div class="content">
+                <img src="img/tennis.png" alt="Tennis game" class="project-img">
+                    <h3>Tennis game</h3>
+                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                </div>
+                </div>
+            <!-- END GRID -->
             </div>
+            <!-- SECOND GRID -->
+            <div class="row">
+                <div class="column">
+                    <div class="content">
+                        <img src="img/calculator.png" alt="Calculator" class="project-img">
+                        <h3>Calculator</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <img src="img/chuck_api.png" alt="Chuck Norris jokes" class="project-img">
+                        <h3>Chuck Norris Jokes</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <img src="img/quiz.png" alt="Quiz" class="project-img">
+                        <h3>Quiz game</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <img src="img/website.png" alt="website" class="project-img">
+                        <h3>Website</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+            <!-- END GRID -->
             </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/tic-tac-toe.png" alt="Tic-tac-toe" class="project-img">
-                <h3>Tic Tac Toe</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+            <div class="div-btn-next">
+                <button id="next-page" class="btn-next">NEXT</button>
             </div>
-            </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/snake_game.png" alt="Snake game" class="project-img">
-                <h3>Snake</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/tennis.png" alt="Tennis game" class="project-img">
-                <h3>Tennis game</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-        <!-- END GRID -->
         </div>
-        <!-- SECOND GRID -->
-        <div class="row">
-            <div class="column">
-            <div class="content">
-                <img src="img/calculator.png" alt="Calculator" class="project-img">
-                <h3>Calculator</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <div id="secondPage" class="second-page">
+            <!-- THIRD GRID -->
+            <div class="row">
+                <div class="column">
+                    <div class="content">
+                        <img src="img/mybooks.png" alt="Virtual library" class="project-img">
+                        <h3>My virtual library app</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <img src="img/nopic.png" alt="Chuck Norris jokes" class="project-img">
+                        <h3>Chuck Norris Jokes</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <img src="img/nopic.png" alt="Quiz" class="project-img">
+                        <h3>Quiz game</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <img src="img/nopic.png" alt="website" class="project-img">
+                        <h3>Website</h3>
+                        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    </div>
+                </div>
+            <!-- END GRID -->
             </div>
+            <div class="div-btn-prev">
+                <button id="prev-page" class="btn-prev">PREVIOUS</button>
             </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/chuck_api.png" alt="Chuck Norris jokes" class="project-img">
-                <h3>Chuck Norris Jokes</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/quiz.png" alt="Quiz" class="project-img">
-                <h3>Quiz game</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/website.png" alt="website" class="project-img">
-                <h3>Website</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-        <!-- END GRID -->
-        </div>
-        <!-- THIRD GRID -->
-        <div class="row">
-            <div class="column">
-            <div class="content">
-                <img src="img/mybooks.png" alt="Virtual library" class="project-img">
-                <h3>My virtual library app</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-            <!--div class="column">
-            <div class="content">
-            <img src="img/nopic.png" alt="Chuck Norris jokes" class="project-img">
-                <h3>Chuck Norris Jokes</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/nopic.png" alt="Quiz" class="project-img">
-                <h3>Quiz game</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div>
-            <div class="column">
-            <div class="content">
-            <img src="img/nopic.png" alt="website" class="project-img">
-                <h3>Website</h3>
-                <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-            </div>
-            </div -->
-        <!-- END GRID -->
         </div>
     </div>
     <script src="script.js"></script>
